--- a/website/index.html
+++ b/website/index.html
@@ -16,11 +16,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="56" id="mainPage">
 
+  // NAVBAR
   <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
       aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,6 +48,7 @@
     </div>
   </nav>
 
+  // SECTIONS
   <section id="section1" class="section">
     <div class="jumbotron" id="jumbo">
       <h4>Smart Controls</h1>
@@ -111,6 +112,5 @@
   </section>
 
 </body>
-
 
 </html>
